[gd_scene load_steps=17 format=2]

[ext_resource path="res://Rules.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://InPlay.gd" type="Script" id=3]
[ext_resource path="res://pop.wav" type="AudioStream" id=4]
[ext_resource path="res://clock-arm-center.png" type="Texture" id=6]
[ext_resource path="res://clock-arm-min.png" type="Texture" id=7]
[ext_resource path="res://clock-arm-hour.png" type="Texture" id=8]
[ext_resource path="res://Clock.gd" type="Script" id=9]
[ext_resource path="res://GameClocks.gd" type="Script" id=10]
[ext_resource path="res://clock-inset-focus.png" type="Texture" id=11]
[ext_resource path="res://clock-inset-normal.png" type="Texture" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.109804, 0.121569, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.223529, 0.215686, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.109804, 0.121569, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 530, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragSplit" type="HSplitContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 10
split_offset = 600
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragSplit" type="HSplitContainer" parent="Margin/DragSplit"]
margin_right = 794.0
margin_bottom = 580.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 10

[node name="InPlay" type="Control" parent="Margin/DragSplit/DragSplit"]
margin_right = 100.0
margin_bottom = 580.0
rect_min_size = Vector2( 100, 0 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Margin/DragSplit/DragSplit/InPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/DragSplit/InPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Margin/DragSplit/DragSplit/InPlay/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 575.0

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/DragSplit/InPlay/Margin/Scroll"]
margin_right = 90.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Settings" type="Control" parent="Margin/DragSplit/DragSplit"]
margin_left = 110.0
margin_right = 794.0
margin_bottom = 580.0
rect_min_size = Vector2( 300, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Margin/DragSplit/DragSplit/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/DragSplit/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 674.0
margin_bottom = 570.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLength" type="HBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
margin_top = 159.0
margin_right = 664.0
margin_bottom = 191.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameLength"]
margin_left = 255.0
margin_top = 9.0
margin_right = 325.0
margin_bottom = 23.0
hint_tooltip = "Den tid hver spiller får når man starter et nyt spil"
mouse_filter = 1
text = "Sek. pr spil"

[node name="SpinBox" type="SpinBox" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameLength"]
margin_left = 335.0
margin_right = 409.0
margin_bottom = 32.0
min_value = 5.0
max_value = 720.0
step = 5.0
value = 300.0
rounded = true

[node name="MatchSetting" type="HBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
margin_top = 245.0
margin_right = 664.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 10
alignment = 1

[node name="Start" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_left = 249.0
margin_right = 290.0
margin_bottom = 32.0
hint_tooltip = "Start game"
text = "Start"

[node name="Stop" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_left = 300.0
margin_right = 340.0
margin_bottom = 32.0
hint_tooltip = "Stop spillet"
text = "Stop"

[node name="NewRule" type="Button" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting"]
margin_left = 350.0
margin_right = 415.0
margin_bottom = 32.0
text = "Ny regel"

[node name="Progress" type="ProgressBar" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
anchor_right = 1.0
margin_top = 280.0
margin_right = 6.10352e-05
margin_bottom = 312.0
rect_min_size = Vector2( 0, 32 )
value = 50.0

[node name="GameClocks" type="HBoxContainer" parent="Margin/DragSplit/DragSplit/Settings/Margin/List"]
margin_top = 311.0
margin_right = 664.0
margin_bottom = 560.0
alignment = 1
script = ExtResource( 10 )

[node name="LeftClock" type="TextureButton" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks"]
margin_left = 55.0
margin_right = 308.0
margin_bottom = 249.0
texture_normal = ExtResource( 12 )
texture_focused = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 9 )

[node name="Hour" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock"]
position = Vector2( 122.776, 117.624 )
rotation = -1.5708
texture = ExtResource( 8 )
centered = false
offset = Vector2( -7, -60 )

[node name="Min" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock"]
position = Vector2( 122.656, 117.508 )
rotation = -0.523599
texture = ExtResource( 7 )
centered = false
offset = Vector2( -7, -88 )

[node name="Center" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock"]
position = Vector2( 121.632, 116.65 )
texture = ExtResource( 6 )

[node name="space" type="Control" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks"]
margin_left = 312.0
margin_right = 352.0
margin_bottom = 249.0
rect_min_size = Vector2( 40, 0 )

[node name="RightClock" type="TextureButton" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks"]
margin_left = 356.0
margin_right = 609.0
margin_bottom = 249.0
texture_normal = ExtResource( 12 )
texture_focused = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 9 )

[node name="Hour" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock"]
position = Vector2( 122.776, 117.624 )
rotation = -1.5708
texture = ExtResource( 8 )
centered = false
offset = Vector2( -7, -60 )

[node name="Min" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock"]
position = Vector2( 122.656, 117.508 )
rotation = -0.523599
texture = ExtResource( 7 )
centered = false
offset = Vector2( -7, -88 )

[node name="Center" type="Sprite" parent="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock"]
position = Vector2( 121.632, 116.65 )
texture = ExtResource( 6 )

[node name="Rules" type="Control" parent="Margin/DragSplit"]
margin_left = 804.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Margin/DragSplit/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Margin/DragSplit/Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Split" type="VBoxContainer" parent="Margin/DragSplit/Rules/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 575.0

[node name="InfoSplit" type="HBoxContainer" parent="Margin/DragSplit/Rules/Margin/Split"]
margin_right = 190.0
margin_bottom = 20.0
custom_constants/separation = 10

[node name="Info" type="Label" parent="Margin/DragSplit/Rules/Margin/Split/InfoSplit"]
margin_top = 3.0
margin_right = 143.0
margin_bottom = 17.0
rect_min_size = Vector2( 143, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sort" type="Button" parent="Margin/DragSplit/Rules/Margin/Split/InfoSplit"]
margin_left = 153.0
margin_right = 190.0
margin_bottom = 20.0
text = "Sort"

[node name="Scroll" type="ScrollContainer" parent="Margin/DragSplit/Rules/Margin/Split"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 570.0
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Margin/DragSplit/Rules/Margin/Split/Scroll"]
margin_right = 190.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="NewRule" type="Button" parent="Margin/DragSplit/Rules/Margin/Split/Scroll/List"]
margin_right = 190.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptRule" type="ConfirmationDialog" parent="."]
margin_left = 397.755
margin_top = 258.714
margin_right = 597.755
margin_bottom = 328.714
window_title = "Bekræft venligst..."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AcceptRule"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0
mouse_filter = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotifySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/GameLength/SpinBox" to="." method="_on_GameTime_value_changed"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/MatchSetting/NewRule" to="." method="_on_NewRule_pressed"]
[connection signal="before_click" from="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock" to="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks" method="stop"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock" to="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/LeftClock" method="_on_pressed"]
[connection signal="before_click" from="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock" to="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks" method="stop"]
[connection signal="pressed" from="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock" to="Margin/DragSplit/DragSplit/Settings/Margin/List/GameClocks/RightClock" method="_on_pressed"]
[connection signal="pressed" from="Margin/DragSplit/Rules/Margin/Split/InfoSplit/Sort" to="Margin/DragSplit/Rules" method="_on_Sort_pressed"]
[connection signal="pressed" from="Margin/DragSplit/Rules/Margin/Split/Scroll/List/NewRule" to="Margin/DragSplit/Rules" method="_on_NewRule_pressed"]
[connection signal="confirmed" from="AcceptRule" to="." method="_on_AcceptRule_confirmed"]
[connection signal="custom_action" from="AcceptRule" to="." method="_on_AcceptRule_custom_action"]
[connection signal="popup_hide" from="AcceptRule" to="." method="_on_AcceptRule_popup_hide"]
